(#41) Fixed - distort woocommerce order backend UI

--- a/admin/css/learndash-wpforo-admin.css
+++ b/admin/css/learndash-wpforo-admin.css
@@ -33,7 +33,7 @@ button.ld-wpforo-accordion:hover {
     color: white;
 }
 
-div.panel {
+.ld-wpforo-adming-setting div.panel {
     padding: 0 18px;
     background-color: white;
     max-height: max-content;
